add auth context
