# cmd/api/api.go
@@ -94,6 +94,7 @@ func (app *application) mount() *chi.Mux {
 		r.Get("/swagger/*", httpSwagger.Handler(httpSwagger.URL(docsURL)))
 
 		r.Route("/posts", func(r chi.Router) {
+			r.Use(app.AuthTokenMiddleware())
 			r.Post("/", app.createPostHandler)
 
 			r.Route("/{postID}", func(r chi.Router) {
@@ -108,6 +109,7 @@ func (app *application) mount() *chi.Mux {
 		r.Route("/users", func(r chi.Router) {
 			r.Put("/activate/{token}", app.activateUserHandler)
 			r.Route("/{userID}", func(r chi.Router) {
+				r.Use(app.AuthTokenMiddleware())
 				r.Use(app.userContextMiddleware)
 
 				r.Get("/", app.getUserByIdHandler)
@@ -116,6 +118,7 @@ func (app *application) mount() *chi.Mux {
 			})
 
 			r.Group(func(r chi.Router) {
+				r.Use(app.AuthTokenMiddleware())
 				r.Get("/feed", app.getUserFeedHandler)
 			})
 		})
@@ -123,6 +126,7 @@ func (app *application) mount() *chi.Mux {
 		r.Route("/auth", func(r chi.Router) {
 			r.Post("/register", app.registerUserHandler)
 			r.Post("/sign-in", app.signInHandler)
+			r.Post("/refresh", app.refreshToken)
 		})
 	})
 
